# StaticLinkingTest

./: CMakeLists.txt  README.md  StaticLinking.swift  build_dynamic.sh  build_static.sh  main.swift
